# GraphDB

./: .gitignore  1.cpp  10.cpp  11.cpp  12.cpp  13.cpp  14.cpp  15.cpp  16.cpp  17.cpp  18.cpp  19.cpp  2.cpp  20.cpp  21.cpp  22.cpp  23.cpp  24.cpp  25.cpp  26.cpp  27.cpp  28.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp  CMakeLists.txt  README.md  TODO.md  global.h  graphdb.files  graphdb.includes  helper.h  main-algo.cpp  main-dfs.cpp  main-gdbench.cpp  main-input.cpp  (+16 more)
GDBench/: CustomVisitor.h  QueryDescription.h  QueryRandomizer.h  RecursiveDFSCustomVisitor.h  UpdateDescription.h  UpdateVisitor.h  Utilities.h  Utils.h  sim_api.h  util.h
LDBC/: :w  LDBCRandomizer.h  LDBCTransactionalQuery.cpp  LDBCTranxQuery.cpp  LdbcConcurrentQuery.cpp  LdbcConcurrentQuery.h  LdbcCustomVisitor.h  LdbcQueryDescription.h  LdbcRDFSCustomVisitor.h  LdbcRDFSQueryDescription.h  LdbcUpdateDescription.h  LdbcUpdateVisitor.h  \
algorithm/: BreadthFirstSearch.h  DepthFirstSearch.h  DijkstraShortestPath.h  PageRank.h  RecursiveDepthFirstSearch.h  StronglyConnectedComponent.h
boost-examples/bfs/: BreadthFirstSearch.cpp  CMakeLists.txt
boost-examples/placeg/: BundledProperties.cpp  CMakeLists.txt
examples/offsetof/: memlayout.cpp
examples/threads/: read-only.cpp
gui/gdbw/: CMakeLists.txt  Page1.qml  Page1Form.ui.qml  main.qml  qml.qrc
pybind/: GraphPrototypes.h  README.md  graph_python.cpp  graph_python.py
readers/: FileReader.h  FileTypes.h  FreeReader.h  GDBReader.h  GDBenchQueryInput.csv  GDReader.h  GraphReaderJSON.h  LDBCReader.h  LDBCTranslator.h  NeoReader.h
src/: CMakeLists.txt  CMakeLists.txt~  EdgeProperty.h  Graph.h  PropertyList.h  PropertyList.h~  Utility.h  VertexProperty.h  main.cpp  main.cpp~
storage/: BaseGraph.h  CMakeLists.txt  Edge.cpp  Edge.h  FString.h  FixedString.h  GraphType.cpp  GraphType.h  GraphTypeWithLock.h  Index.h  LinkedList.h  Node.cpp  Node.h  PropertyList.h  Vertex.cpp  Vertex.h  macros.h
t/: main-fixstring
tests/gd/: sndata.gd  sndata100-new.gd  sndata100.gd  sndata1000.gd  sndata10000.gd  sndata5000.gd
tests/gs/: g1.h
tests/json/: t1.json
tests/ldbc/social_network/: .comment_0.csv.crc  .comment_hasCreator_person_0.csv.crc  .comment_hasTag_tag_0.csv.crc  .comment_isLocatedIn_place_0.csv.crc  .comment_replyOf_comment_0.csv.crc  .comment_replyOf_post_0.csv.crc  .forum_0.csv.crc  .forum_containerOf_post_0.csv.crc  .forum_hasMember_person_0.csv.crc  .forum_hasModerator_person_0.csv.crc  .forum_hasTag_tag_0.csv.crc  .m0factors.txt.crc  .m0friendList0.csv.crc  .m0testdata.json.crc  .organisation_0.csv.crc  .organisation_isLocatedIn_place_0.csv.crc  .person_0.csv.crc  .person_0.csv.swp  .person_email_emailaddress_0.csv.crc  .person_email_emailaddress_0.csv.swp  .person_hasInterest_tag_0.csv.crc  .person_isLocatedIn_place_0.csv.crc  .person_knows_person_0.csv.crc  .person_likes_comment_0.csv.crc  .person_likes_post_0.csv.crc  .person_speaks_language_0.csv.crc  .person_studyAt_organisation_0.csv.crc  .person_workAt_organisation_0.csv.crc  .place_0.csv.crc  .place_isPartOf_place_0.csv.crc  .post_0.csv.crc  .post_hasCreator_person_0.csv.crc  .post_hasTag_tag_0.csv.crc  .post_isLocatedIn_place_0.csv.crc  .tag_0.csv.crc  .tag_hasType_tagclass_0.csv.crc  .tagclass_0.csv.crc  .tagclass_isSubclassOf_tagclass_0.csv.crc  .temp_updateStream_0_0_forum.crc  .temp_updateStream_0_0_person.crc  (+4 more)
tests/stl/: adjacency_list.cpp  edge_list.cpp
transactions/: CMakeLists.txt  Concurrency_control_config.h  ConcurrentBFS.h  ConcurrentVisitor.h  Lock.h  LockManager.h  LocksManager.cpp  LocksManager.h  RagManager.cpp  RagManager.h  Transaction.cpp  Transaction.h  TransactionManager.cpp  TransactionManager.h  TransactionalBFS.h  TranxBreadthFirstSearch.h
traversals/: BreadthFirstSearch.h  CVisitor.h  Collector.h  CustomVisitor.h  DepthFirstSearch.h  EdgeVisitor.h  Filter.h  FilterType.h  QueryDescription.h  QueryRandomizer.h  RecursiveDepthFirstSearch.h  Terminator.h  TraversalDescription.h  Utilities.h  VertexVisitor.h  VertexVisitor.h_  Visitor.h  breadth_first_search.h  breadth_first_search.h_
